# PySide6-SiliconUI

./: README.md  pyproject.toml  setup.py
examples/Gallery for siui/: start.py  ui.py
examples/Gallery for siui/components/page_about/: page_about.py
examples/Gallery for siui/components/page_container/: page_container.py
examples/Gallery for siui/components/page_homepage/: page_homepage.py
examples/Gallery for siui/components/page_icons/: page_icons.py
examples/Gallery for siui/components/page_widgets/: page_widgets.py
examples/My-TODOs/: start.py  ui.py
examples/My-TODOs/components/page_about/: page_about.py
examples/My-TODOs/components/page_homepage/: homepage.py
examples/My-TODOs/components/widgets/: button.py  group_title.py  tasks.py
siui/components/combobox/: combobox.py
siui/components/combobox/abstracts/: combobox.py
siui/components/menu/: option.py
siui/components/menu/abstracts/: ani_manager.py  menu.py
siui/components/page/: child_page.py
siui/components/progress_bar/: progress_bar.py
siui/components/slider/: slider.py
siui/components/spinbox/: spinbox.py
siui/components/titled_widget_group/: titled_widget_group.py
siui/components/tooltip/: tooltip.py
siui/components/widgets/: button.py  container.py  label.py  line_edit.py  navigation_bar.py
siui/components/widgets/abstracts/: button.py  label.py  line_edit.py  widget.py
siui/core/: animation.py  token.py
siui/gui/: font.py
siui/gui/color_group/: dark.py
siui/templates/application/: application.py
siui/templates/application/components/layer/: layer.py
(+7 files in other folders)
